image problem fixed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <nav>
             <img src="images/header.svg" class="navbar-svg">
             <ul class="main-nav">
-              <li><a href="home" class="logo"><img src="images/brent.png" alt="Logo"></a></li>
+              <li><a href="home" class="logo"><img src="images/Brent.png" alt="Logo"></a></li>
               <li><a href="home">Home</a></li>
               <li><a href="skills">Skills</a></li>
               <li><a href="contact">Contact</a></li>
