added new layout and information

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,9 @@
 
     <!-- HEADER -->
     <nav>
-            <img src="images/header.svg" class="navbar-svg">
             <ul class="main-nav">
-              <li><a href="home" class="logo"><img src="images/Brent.png" alt="Logo"></a></li>
-              <li><a href="home">Home</a></li>
+              <li><a href="/" class="logo"><img src="images/Brent.png" alt="Logo"></a></li>
+              <li><a href="/">Home</a></li>
               <li><a href="skills">Skills</a></li>
               <li><a href="contact">Contact</a></li>
             </ul>
@@ -31,12 +30,12 @@
         
     <div class="mobile-menu">
         <div>
-            <a href="home">
+            <a href="/">
                 <img src="images/Brent.svg" alt="Brent Logo">
             </a>
         </div>
         <ul>
-            <li><a href="home">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="skills">Skills</a></li>
             <li><a href="contact">Contact</a></li>
         </ul>
