--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -6,5 +6,5 @@ $red:#D01317;
 $black:#000000;
 
 //fonts
-$playfair:'Playfair Display', serif;
+$roboto:'Roboto', serif;
 $raleway:'Raleway', sans-serif;
