--- a/_sass/base/_fonts.scss
+++ b/_sass/base/_fonts.scss
@@ -1,3 +1,3 @@
 //fonts
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Raleway:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700|Roboto:300,400,700&display=swap');
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
