--- a/_sass/pages/_404.scss
+++ b/_sass/pages/_404.scss
@@ -8,7 +8,7 @@
     p {
         font-family: $raleway;
         font-size: 2em;
-        color: $yellow;
+        color: $black;
         font-weight: 300;
     }
 }
