--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -20,7 +20,7 @@
             padding: 29px;
             font-size: 0.9vw;
             font-weight: 300;
-            color: $yellow;
+            color: $black;
             width: 37%;
             float: left;
             a {
