--- a/_sass/pages/_skills.scss
+++ b/_sass/pages/_skills.scss
@@ -1,19 +1,24 @@
 .skills-title {
-    margin-bottom: 118px;
+    margin-bottom: 20px;
 }
 .skills-wrapper {
     width: 96%;
     display: flex;
-    justify-content: space-between;
-    margin-top: 60px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding-top: 60px;
+    background: rgba(0,0,0,0.1);   
+    box-shadow: 9px 8px 16px -11px $black;
     img {
-        width: 12%;
-        align-self: center;
-        cursor: pointer;
-    }:hover {
-        animation: bounce;
-        animation-duration: 1s;
-    }
+            width: 10%;
+            margin: 0 5%;
+            align-self: center;
+            margin-bottom: 30px;
+            cursor: pointer;
+        }:hover {
+            animation: bounce;
+            animation-duration: 1s;
+        }
 }
 .skills-last-row {
     justify-content: flex-start;
@@ -23,42 +28,54 @@
     }
 }
 .module {
-    background: white;
-    border-radius: 20px;
-    padding: 50px;
-    position: fixed;
-    top: 100px;
+    background: rgba(0,0,0,0.4);
     display: none;
-    width: 82%;
-    img {
-        width: 20%;
-        float: left;
-    }
-    h1 {
-        color: $black;
-        width: 50%;
-        font-size: 3em;
-        margin-left: 5%;
-    }
-    p {
-        font-family: $raleway;
-        color:$yellow;
-        font-size: 1.5em;
-        width: 100%;
-        float: left;
-        a {
-            color: $red;
-        }:hover {
-            color: $blue;
-        }
-    }
-    .closing-button {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    .module-content {
         position: relative;
-        bottom: 1vw;
-        left: 79vw;
-        color: $black;
-        font-size: 1.5rem;
-    }       
+        background: white;
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        border: 1px solid $black; 
+        border-radius: 20px;
+        padding: 50px;
+        width: 82%;
+        img {
+            width: 20%;
+            float: left;
+        }
+        h1 {
+            color: $black;
+            width: 50%;
+            font-size: 3em;
+            margin-left: 5%;
+        }
+        p {
+            font-family: $roboto;
+            color: $black;
+            font-size: 1.5em;
+            width: 100%;
+            float: left;
+            a {
+                color: $red;
+            }:hover {
+                color: $blue;
+            }
+        }
+        .closing-button {
+            position: relative;
+            bottom: 1vw;
+            left: 79vw;
+            color: $black;
+            font-size: 1.5rem;
+        }       
+    }
 }
 .skills-detail-header {
     display: flex;
@@ -73,10 +90,10 @@
     .skills-wrapper {
         flex-wrap: wrap;
         margin-top: 0;
-        img {
-            width: 36%;
-            margin-bottom: 20px;
-        }
+            img {
+                width: 36%;
+                margin-bottom: 20px;
+            }
     }
     .skills-last-row {
         justify-content: space-between;
@@ -85,7 +102,7 @@
         }
     }
     .module {
-        width: 65%;
+        width: 100%;
         h1 {
             font-size: 1.5em;
         }
